syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common.proto";
import "doc_type_field.proto";

option java_multiple_files = true;
option java_package = "io.openk9.datasource.grpc";
option java_outer_classname = "DocTypeProto";

package docType;

service DocTypeService {
  rpc addDocType(DocTypeRequest) returns (DocType) {}
  rpc getDocType(common.Id) returns (DocType) {}
  rpc deleteDocType(common.Id) returns (DocType) {}
  rpc patchDocType(DocTypeRequestId) returns (DocType) {}
  rpc updateDocType(DocTypeRequestId) returns (DocType) {}
  rpc getDocTypes(common.Pageable) returns (DocTypeList) {}
  rpc getDocTypeFields(common.Id) returns (docTypeField.DocTypeFieldList) {}
  rpc createDocTypeField(DocTypeIdDocTypeField) returns (docTypeField.DocTypeField) {}
  rpc removeDocTypeField(DocTypeFieldDocTypeId) returns (docTypeField.DocTypeField) {}
}

message DocTypeFieldDocTypeId {
  int64 docTypeId = 1;
  int64 docTypeFieldId = 2;
}

message DocTypeIdDocTypeField {
  int64 docTypeId = 1;
  docTypeField.DocTypeFieldRequest docTypeField = 2;
}

message DocTypeRequestId {
  int64 id = 1;
  DocTypeRequest request = 2;
}

message DocTypeRequest {
  string name = 1;
  string description = 2;
}

message DocTypeList {
  repeated DocType response = 1;
}

message DocType {
  int64 id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp createDate = 4;
  google.protobuf.Timestamp modifiedDate = 5;
}
